// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AsideSection /> With minimal options matches snapshot 1`] = `
<div
  className="y-aside-section"
>
  <CustomizedBlock
    textSize="small"
  >
    <FixedGridRow
      bottomSpacing="small"
      className=

          {
            border-bottom: 1px solid #dde0e6;
          }
    >
      <FixedGridColumn>
        <Heading
          level="2"
          size="none"
        >
          <CustomizedBlock
            bottomSpacing="xSmall"
          >
            <CustomizedText
              bold={true}
              uppercase={true}
            >
              Test title
            </CustomizedText>
          </CustomizedBlock>
        </Heading>
      </FixedGridColumn>
    </FixedGridRow>
  </CustomizedBlock>
  <div />
</div>
`;

exports[`<AsideSection /> with action prop renders the action in its own FixedGridColumn 1`] = `
<div
  className="y-aside-section"
>
  <CustomizedBlock
    textSize="small"
  >
    <FixedGridRow
      bottomSpacing="small"
      className=

          {
            border-bottom: 1px solid #dde0e6;
          }
    >
      <FixedGridColumn>
        <Heading
          level="2"
          size="none"
        >
          <CustomizedBlock
            bottomSpacing="xSmall"
          >
            <CustomizedText
              bold={true}
              uppercase={true}
            >
              Test title
            </CustomizedText>
          </CustomizedBlock>
        </Heading>
      </FixedGridColumn>
      <FixedGridColumn
        fixed={true}
      >
        <CustomizedClickable>
          Add
        </CustomizedClickable>
      </FixedGridColumn>
    </FixedGridRow>
  </CustomizedBlock>
  <div />
</div>
`;

exports[`<AsideSection /> with children matches the snapshot 1`] = `
<div
  className="y-aside-section"
>
  <CustomizedBlock
    textSize="small"
  >
    <FixedGridRow
      bottomSpacing="small"
      className=

          {
            border-bottom: 1px solid #dde0e6;
          }
    >
      <FixedGridColumn>
        <Heading
          level="2"
          size="none"
        >
          <CustomizedBlock
            bottomSpacing="xSmall"
          >
            <CustomizedText
              bold={true}
              uppercase={true}
            >
              Test title
            </CustomizedText>
          </CustomizedBlock>
        </Heading>
      </FixedGridColumn>
    </FixedGridRow>
  </CustomizedBlock>
  <div>
    <div>
      Child Content
    </div>
  </div>
</div>
`;
